--- a/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTuyen.form
+++ b/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTuyen.form
@@ -264,6 +264,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="S&#x1eec;A"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSuaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnXoa">
           <Properties>
