--- a/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTuyen.form
+++ b/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTuyen.form
@@ -66,6 +66,7 @@
                                               <EmptySpace max="-2" attributes="0"/>
                                               <Component id="cbbGoiYTram" min="-2" pref="157" max="-2" attributes="0"/>
                                           </Group>
+                                          <Component id="btnXoaTram" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -120,7 +121,7 @@
                       <Component id="jtfTenTuyen" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
@@ -130,11 +131,13 @@
                               <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="cbbGoiYTram" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="btnXoaTram" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="17" max="32767" attributes="0"/>
+                  <EmptySpace pref="14" max="32767" attributes="0"/>
                   <Component id="cbbTiemKiem" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -238,12 +241,10 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="jtaCacTramDiQua">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
               </Properties>
-              <Events>
-                <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtaCacTramDiQuaKeyReleased"/>
-              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -329,7 +330,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel11">
           <Properties>
-            <Property name="text" type="java.lang.String" value="G&#x1ee3;i &#xfd; tr&#x1ea1;m"/>
+            <Property name="text" type="java.lang.String" value="Ch&#x1ecd;n tr&#x1ea1;m:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="cbbGoiYTram">
@@ -344,6 +345,14 @@
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
+        </Component>
+        <Component class="javax.swing.JButton" name="btnXoaTram">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="X&#xf3;a 1 tr&#x1ea1;m"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnXoaTramActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
