--- a/QuanLiBanVeTau/src/view/MainFrame.form
+++ b/QuanLiBanVeTau/src/view/MainFrame.form
@@ -379,6 +379,9 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/images/gear.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="C&#xe0;i &#x111;&#x1eb7;t t&#xe0;i kho&#x1ea3;n"/>
                   </Properties>
                 </Component>
