--- a/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTram.form
+++ b/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTram.form
@@ -218,6 +218,11 @@
                   <SubComponents>
                     <Component class="javax.swing.JTable" name="jtbDanhSachTram">
                       <Properties>
+                        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                          <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
+                            <EmptyBorder/>
+                          </Border>
+                        </Property>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="2" rowCount="0">
                             <Column editable="false" title="T&#xea;n tr&#x1ea1;m" type="java.lang.Object"/>
@@ -514,6 +519,11 @@
                   <SubComponents>
                     <Component class="javax.swing.JTable" name="jtbKhoangCachTram">
                       <Properties>
+                        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                          <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
+                            <EmptyBorder/>
+                          </Border>
+                        </Property>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="3" rowCount="0">
                             <Column editable="false" title="Tr&#x1ea1;m b&#x1eaf;t &#x111;&#x1ea7;u" type="java.lang.Object"/>
