--- a/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTuyen.form
+++ b/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTuyen.form
@@ -169,6 +169,11 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="jtbTuyen">
               <Properties>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
+                    <EmptyBorder/>
+                  </Border>
+                </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="3" rowCount="0">
                     <Column editable="false" title="M&#xe3; tuy&#x1ebf;n" type="java.lang.Object"/>
