--- a/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTuyen.form
+++ b/QuanLiBanVeTau/src/view/quanlituyen/JPanelDanhSachTuyen.form
@@ -3,6 +3,11 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JDialog" name="jdlThuocTinhTuyen">
+      <Properties>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[508, 555]"/>
+        </Property>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
